syntax = "proto3";

import "google/api/annotations.proto";

package api.project.v1;

option go_package = "galileo/api/management/project/v1;v1";
option java_multiple_files = true;
option java_package = "api.management.project.v1";

service Project {
  rpc CreateProject (CreateProjectRequest) returns (CreateProjectReply) {
    option(google.api.http) = {
      post: "v1/api/project"
      body: "*"
    };
  };
  rpc UpdateProject (UpdateProjectRequest) returns (UpdateProjectReply);
  rpc DeleteProject (DeleteProjectRequest) returns (DeleteProjectReply);
  rpc GetProject (GetProjectRequest) returns (GetProjectReply) {
    option(google.api.http) = {
      get: "v1/api/project/{id}"
    };
  };
  rpc ListProject (ListProjectRequest) returns (ListProjectReply);
}

message CreateProjectRequest {
  string name = 1;
  string identifier = 2;
  string description = 3;
  string remark = 4;
  uint32 createdBy = 5;
}

message CreateProjectReply {
  int64 id = 1;
}

message ProjectInfo {
  string name = 1;
  string identifier = 2;
  string remark = 3;
  int64 id = 4;
  uint32 status = 5;
  string description = 6;
  int64 createdAt = 7;
  uint32 createdBy = 8;
  int64 updateAt = 9;
  int64 updateBy = 10;
}

message UpdateProjectRequest {}
message UpdateProjectReply {}

message DeleteProjectRequest {}
message DeleteProjectReply {}

message GetProjectRequest {
  int64 id = 1;
}
message GetProjectReply {}

message ListProjectRequest {}
message ListProjectReply {}